--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "MX_Alps_Hybrid"]
 	path = MX_Alps_Hybrid
 	url = git@github.com:ai03-2725/MX_Alps_Hybrid.git
+[submodule "keyboard_footprints"]
+	path = keyboard_footprints
+	url = git@github.com:pierrechevalier83/keyboard_footprints.git
